--- a/myTickets.html
+++ b/myTickets.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Tickets</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="./js/ticket.js"></script>
   <style>
     body {
       background-color: #f1f8ff;
@@ -63,26 +68,11 @@
       <div class="col-md-8 offset-md-2">
         <div class="ticket-list-container">
           <h2 class="text-center">My Tickets</h2>
-          <div class="ticket">
-            <h3>Concert Ticket</h3>
-            <p>Category: General Admission</p>
-            <p>Date: 2023-06-15</p>
-            <p>Time: 8:00 PM</p>
-          </div>
-          <div class="ticket">
-            <h3>Concert Ticket</h3>
-            <p>Category: VIP</p>
-            <p>Date: 2023-06-20</p>
-            <p>Time: 7:30 PM</p>
-          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
