--- a/ticket.html
+++ b/ticket.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Concert Ticket Booking</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="./js/category.js"></script>
   <style>
     body {
       background-color: #f1f8ff;
@@ -77,21 +82,16 @@
               <label for="ticket-category">Ticket Category</label>
               <select class="form-control" id="ticket-category" required>
                 <option value="" selected disabled>Select Category</option>
-                <option value="general">General Admission</option>
-                <option value="vip">VIP</option>
-                <option value="premium">Premium</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Book Tickets</button>
+            <button type="submit" class="btn btn-primary btn-block" onclick="buyTickets()">Book Tickets</button>
           </form>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
