--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
                         <input type="password" class="form-control" id="password" placeholder="Enter your password">
                     </div>
                     <button type="submit" class="btn btn-primary" onclick="login()">Login</button>
+                    <button type="submit" class="btn btn-primary" onclick="register()">Register</button>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
